--- a/Url_shortner2/UrlShortner/UrlShortner/pom.xml
+++ b/Url_shortner2/UrlShortner/UrlShortner/pom.xml
@@ -73,6 +73,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
